--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "vitest-bug",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "type": "module",
@@ -9,10 +10,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.11.4",
-    "tsx": "^4.7.0",
     "vitest": "^1.2.0"
   }
 }
