--- a/subpkg/package.json
+++ b/subpkg/package.json
@@ -1,10 +1,11 @@
 {
   "name": "subpkg",
   "version": "1.0.0",
+  "private": true,
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
